[package]
name = "learn_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.133"
serde_json = "1.0.74"
serde_derive = "1.0.133"
chrono = "0.4.19"
sysinfo = "0.22.5"
num_cpus = "1.13.1"