[package]
name = "learn_login"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
tide = "0.16.0"
dotenv = "0.15.0"
chrono = "0.4.19"
log = "0.4.14"
pretty_env_logger = "0.4.0"
sqlx = {version="0.5.1",features=["runtime-async-std-rustls","macros","chrono","json","postgres","uuid"] }
uuid = {version="0.8.2",features=["serde","v4"]}
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.74"
rustls = "0.20.2"
rust-argon2 = "1.0.0"
